Actualización filtros, listado de productos, vehículos, ordenes de compra y nueva vista detalle subasta

--- a/maipogrande/ordenes/templates/ordenes/orden-listar.html
+++ b/maipogrande/ordenes/templates/ordenes/orden-listar.html
@@ -18,12 +18,12 @@
         <div class="col col-1"></div>
         <div class="col col-2">
             <a class="btn btn-secondary" 
-                href="{% url 'cargarOrdenesSinProcesar' %}" role="button"> Actualizar lista</a>
+                href="{% url 'actualizarListaOrdenes' %}" role="button"> Actualizar lista</a>
         </div>
         <div class="col col-1"></div>
-        <!-- <div class="col col-2">
+        <div class="col col-2">
             <a class="btn btn-primary" 
-                href="{% url 'registrarOrden' %}" role="button"> Nueva orden</a> -->
+                href="{% url 'registrarOrden' %}" role="button"> Nueva orden</a>
         </div>
     </div>
     <hr class="col-12">
