--- a/maipogrande/productor/templates/productor/home-productor.html
+++ b/maipogrande/productor/templates/productor/home-productor.html
@@ -31,29 +31,27 @@
             <h3>Datos comerciales</h3>
             <p class="text-justify small">
                 Usted podrá:
-            <ul>
-                <li>Ingresar sus datos comerciales.</li>
-                <li>Actualizar datos comerciales.</li>
-            </ul>
+                <ul>
+                    <li>Ingresar sus datos comerciales.</li>
+                    <li>Actualizar datos comerciales.</li>
+                </ul>
         </div>
         <div class="col-md-4">
             <h3>Productos</h3>
-            <p class="text-justify small">
+            <p class="text-justify small"></p>
             <ul>
                 <li>Ingresar nuevos productos.</li>
                 <li>Actualizar información de sus productos.</li>
                 <li>Visualizar el estado de sus productos.</li>
             </ul>
-            </p>
         </div>
         <div class="col-md-4">
             <h3>Transacciones</h3>
-            <p class="text-justify small">
+            <p class="text-justify small"></p>
             <ul>
                 <li>Visualizar su estado de ventas.</li>
                 <li>Ver su historial de ventas.</li>
             </ul>
-            </p>
         </div>
     </div>
 {% endblock %}
