--- a/maipogrande/ordenes/templates/ordenes/orden-registrar.html
+++ b/maipogrande/ordenes/templates/ordenes/orden-registrar.html
@@ -17,7 +17,7 @@
     <h4>Datos de la orden de compra</h4>
     <div class="panel panel-default">
         <div class="panel-body">
-            <form class="text-justify border border-light" id="form-container" method="post" action="">
+            <form id="form-container" class="text-justify border border-light"  method="post" action="">
                 {% csrf_token %}
                 <!-- Datos del formulario de orden de compra -->
                 <div class="row text-center" style="margin-left:auto; margin-right:auto;">
@@ -40,8 +40,7 @@
                         {{ form.Observation }}
                     </div>
                 </div>
-            </form>
-            <br><br>
+                <br><br>
                 <!-- formulario de detalle de orden de compra -->
                 <h4>Detalle de orden de compra</h4>
                 {{ order_detail.management_form }}
@@ -70,6 +69,7 @@
                 </table>
                 <br><br><br>
                 <button class="btn btn-m btn-success" type="submit"> Grabar orden </button>
+            </form>
                 <a class="btn btn-light" href="{% url 'listarOrdenes' %}" role="button"> Cancelar </a>
         </div>
     </div>
