--- a/maipogrande/ordenes/templates/ordenes/orden-registrar.html
+++ b/maipogrande/ordenes/templates/ordenes/orden-registrar.html
@@ -1,31 +1,28 @@
 {% extends 'core/base-inicial.html' %}
 {% load static %}
 {% block titulo %}
-    Registro de ordenes de compra
+    Registrar orden de compra
 {% endblock %}
 
 {% block contenido %}
-<div class="container">
-    <p class="lead text-center">
+    <p class="small">
         Registre su orden de compra, una vez que este listo, pulse
-        el botón "grabar orden".<br>
-        procesaremos su orden de compra y notificaremos por correo 
-        electrónico cuando tengamos las mejores ofertas para usted, 
-        posteriormente podrá aceptar la propuesta para luego seguir con el 
-        proceso de compra de los productos solicitados.
+        el botón "Grabar orden".<br>
+        Recuerde que una vez procesada su orden de compra, 
+        esta ya no podrá ser actualizada.
     </p>
     <h4>Datos de la orden de compra</h4>
     <div class="panel panel-default">
         <div class="panel-body">
-            <form id="form-container" class="text-justify border border-light"  method="post" action="">
+            <form id="form-container" method="post" action="">
                 {% csrf_token %}
                 <!-- Datos del formulario de orden de compra -->
-                <div class="row text-center" style="margin-left:auto; margin-right:auto;">
+                <div class="row">
                     <div class="col-4">
                         <label class="font-weight-bold">Fecha</label>
                         {{ form.OrderDate }}
                     </div>
-                    <div class="col-4 mt-1" style="height: 50px;">
+                    <div class="col-4" style="height: 50px;">
                         <label class="font-weight-bold">Condición de pago</label>
                         {{ form.PaymentCondition }}
                     </div>
@@ -41,13 +38,14 @@
                     </div>
                 </div>
                 <br><br>
+
                 <!-- formulario de detalle de orden de compra -->
                 <h4>Detalle de orden de compra</h4>
                 {{ order_detail.management_form }}
                 <table class="col-md-7 table-responsive mx-auto" style="width: 500px;">
                     <thead>
                         <th>Producto</th>
-                        <th>Cantidad (kg)</th>
+                        <th>Cantidad</th>
                         <th></th>
                     </thead>
                     {% for detalle in order_detail %}
@@ -69,12 +67,11 @@
                 </table>
                 <br><br><br>
                 <button class="btn btn-m btn-success" type="submit"> Grabar orden </button>
-            </form>
                 <a class="btn btn-light" href="{% url 'listarOrdenes' %}" role="button"> Cancelar </a>
+            </form>
         </div>
     </div>
     <br><br>
-</div>
 {% endblock %}
 
 {% block jsBody %}
