Aceptar y rechazar productos terminado

--- a/maipogrande/cexterno/templates/cexterno/home-externo.html
+++ b/maipogrande/cexterno/templates/cexterno/home-externo.html
@@ -13,7 +13,7 @@
     <br>
     <a class="enlace" href="{% url 'registrarOrden' %}"> Nueva orden </a>
     <br>
-    <a class="enlace" href="#"> Confirmar orden </a>
+    <a class="enlace" href="{% url 'listarOrdenesEntregadas' %}"> Confirmar orden </a>
 {% endblock %}
 
 {% block contenido %}
