--- a/maipogrande/cexterno/templates/cexterno/home-externo.html
+++ b/maipogrande/cexterno/templates/cexterno/home-externo.html
@@ -14,6 +14,16 @@
     <a class="enlace" href="{% url 'registrarOrden' %}"> Nueva orden </a>
     <br>
     <a class="enlace" href="{% url 'listarOrdenesEntregadas' %}"> Confirmar orden </a>
+    <br>
+    <a class="enlace" href="{% url 'listarOrdenesRechazadas' %}"> Ordenes rechazadas </a>
+    <br><br>
+    <a class="text-justify text-center"><b>Pagos</b></a>
+    <br>
+    <a class="enlace" href="{% url 'listarOrdenesAceptadas' %}"> Historial de pagos</a>
+    <br><br>
+    <a class="text-justify text-center"><b>Compras</b></a>
+    <br>
+    <a class="enlace" href="{% url 'verHistorialCompras' %}"> Historial de compras</a>
 {% endblock %}
 
 {% block contenido %}
