Estadisticas en cliente externo terminado

--- a/maipogrande/cexterno/templates/cexterno/home-externo.html
+++ b/maipogrande/cexterno/templates/cexterno/home-externo.html
@@ -24,6 +24,10 @@
     <a class="text-justify text-center"><b>Compras</b></a>
     <br>
     <a class="enlace" href="{% url 'verHistorialCompras' %}"> Historial de compras</a>
+    <br><br>
+    <a class="text-justify text-center"><b>Reportes</b></a>
+    <br>
+    <a class="enlace" href="{% url 'verEstadisticas' %}"> Estadísticas</a>
 {% endblock %}
 
 {% block contenido %}
