--- a/maipogrande/ordenes/templates/ordenes/orden-registrar.html
+++ b/maipogrande/ordenes/templates/ordenes/orden-registrar.html
@@ -17,15 +17,15 @@
     <h4>Datos de la orden de compra</h4>
     <div class="panel panel-default">
         <div class="panel-body">
-            <form id="form-container" class="text-justify border border-light"  method="post" action="">
+            <form id="form-container" method="post" action="">
                 {% csrf_token %}
                 <!-- Datos del formulario de orden de compra -->
-                <div class="row text-center" style="margin-left:auto; margin-right:auto;">
+                <div class="row">
                     <div class="col-4">
                         <label class="font-weight-bold">Fecha</label>
                         {{ form.OrderDate }}
                     </div>
-                    <div class="col-4 mt-1" style="height: 50px;">
+                    <div class="col-4" style="height: 50px;">
                         <label class="font-weight-bold">Condición de pago</label>
                         {{ form.PaymentCondition }}
                     </div>
@@ -44,7 +44,7 @@
                 <!-- formulario de detalle de orden de compra -->
                 <h4>Detalle de orden de compra</h4>
                 {{ order_detail.management_form }}
-                <table class="col-md-7 table-responsive mx-auto" style="width: 500px;">
+                <table class="col-md-7 table-responsive mx-auto px-5" style="width: 500px;">
                     <thead>
                         <th>Producto</th>
                         <th>Cantidad (kg)</th>
