--- a/maipogrande/transportista/templates/transportista/subasta/subasta-pujar.html
+++ b/maipogrande/transportista/templates/transportista/subasta/subasta-pujar.html
@@ -8,39 +8,39 @@
 {% block contenido %}
     <div class="table-responsive justify-content-center">
         <h4>Datos de la subasta</h4>
-        <table class="table table-striped table-hover col-6 bg-light border border-light p-5 text-justify text-black" style="margin-left:auto; margin-right:auto;">
+        <table class="table table-striped table-hover bg-light border border-light text-justify text-black" style="margin-left:auto; margin-right:auto;">
             <tbody class="justify-content-center">
                 <tr>
-                    <td  class="py-0 px-5">Subasta Nro.</td>
-                    <td  class="py-0 px-5">{{ subasta.id }}</td>
+                    <td  class="px-5">Subasta Nro.</td>
+                    <td  class="px-5">{{ subasta.id }}</td>
                 </tr>
                 <tr>
-                    <td class="py-0 px-5">Fecha de inicio</td>
-                    <td  class="py-0 px-5">{{ subasta.AuctionDate }}</td>
+                    <td class="px-5">Fecha de inicio</td>
+                    <td  class="px-5">{{ subasta.AuctionDate }}</td>
                 </tr>
                 <tr>
-                    <td class="py-0 px-5">Valor Propuesto</td>
-                    <td class="py-0 px-5">${{ subasta.Value }} </td>
+                    <td class="px-5">Valor Propuesto</td>
+                    <td class="px-5">${{ subasta.Value }} </td>
                 </tr>
                 <tr>
-                    <td class="py-0 px-5">Peso de la carga</td>
-                    <td class="py-0 px-5">{{ subasta.Weight }} kg</td>
+                    <td class="px-5">Peso de la carga</td>
+                    <td class="px-5">{{ subasta.Weight }} kg</td>
                 </tr>
                 <tr>
-                    <td class="py-0 px-5">Fecha de término</td>
-                    <td class="py-0 px-5">{{ subasta.LimitDate }}</td>
+                    <td class="px-5">Fecha de término</td>
+                    <td class="px-5">{{ subasta.LimitDate }}</td>
                 </tr>
                 <tr>
-                    <td class="py-0 px-5">Observación</td>
-                    <td class="py-0 px-5">{{ subasta.Observation }}</td>
+                    <td class="px-5">Observación</td>
+                    <td class="px-5">{{ subasta.Observation }}</td>
                 </tr>
                 <tr>
-                    <td class="py-0 px-5">Nombre de la compañia</td>
-                    <td class="py-0 px-5">{{ subasta.CompanyName }}</td>
+                    <td class="px-5">Nombre de la compañia</td>
+                    <td class="px-5">{{ subasta.CompanyName }}</td>
                 </tr>
                 <tr>
-                    <td class="py-0 px-5">Destino y método de contacto</td>
-                    <td class="py-0 px-5">{{ subasta.Destination }}<br>
+                    <td class="px-5">Destino y método de contacto</td>
+                    <td class="px-5">{{ subasta.Destination }}<br>
                         {{ subasta.PhoneNumber }}</td>
                 </tr>
             </tbody>
