--- a/maipogrande/ordenes/templates/ordenes/orden-editar.html
+++ b/maipogrande/ordenes/templates/ordenes/orden-editar.html
@@ -5,7 +5,6 @@
 {% endblock %}
 
 {% block contenido %}
-<div class="container">
     <p class="small">
         Actualice su orden de compra, una vez que este listo, pulse
         el botón "Actualizar orden".<br>
@@ -46,7 +45,7 @@
                 <table class="col-md-7 table-responsive mx-auto" style="width: 500px;">
                     <thead>
                         <th>Producto</th>
-                        <th>Cantidad (kg)</th>
+                        <th>Cantidad</th>
                         <th></th>
                     </thead>
                     {% for detalle in order_detail %}
@@ -73,7 +72,6 @@
         </div>
     </div>
     <br><br>
-</div>
 {% endblock %}
 
 {% block jsBody %}
