Vista Estadisticas de Transportista terminadas

--- a/maipogrande/transportista/templates/historial/despachos-entregados-listar.html
+++ b/maipogrande/transportista/templates/historial/despachos-entregados-listar.html
@@ -18,7 +18,7 @@
         <div class="col col-1"></div>
         <div class="col col-2">
             <a class="btn btn-secondary" 
-                href="#" role="button"> Actualizar lista</a>
+                href="{% url 'actualizarListaEntregados' %}" role="button"> Actualizar lista</a>
         </div>
         <div class="col col-1"></div>
         <!-- <div class="col col-2">
