--- a/maipogrande/transportista/templates/transportista/home-transportista.html
+++ b/maipogrande/transportista/templates/transportista/home-transportista.html
@@ -31,7 +31,10 @@
     <a class="enlace" href="{% url 'listarDespachosEntregados' %}">Entregados</a>
     <br>
     <a class="enlace" href="{% url 'listarDespachosCancelados' %}">Cancelados</a>
+    <br><br>
+    <a class="text-justify text-center"><b>Reportes</b></a>
     <br>
+    <a class="enlace" href="{% url 'verEstadisticasDespachos' %}"> Estadísticas </a>
     {% endblock %}
 
 {% block contenido %}
